--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,13 @@
   <meta charset="utf-8">
   <title>RedSocialMean</title>
   <base href="/">
-
+  
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body style="background-color: #eceff1;">
   <app-root></app-root>
+
+
 </body>
 </html>
